# rs-perf-utils

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.githooks/: pre-commit
examples/: dump_perf_strings.rs  read_samples.rs
src/: api.rs  asm_helpers.c  errors.rs  lib.rs  map.rs  pci.rs  perf.rs  performance_counters.rs  pmu.rs  util.rs  x86.rs
src/arch/: asm_helpers.c
src/arch/powerpc64/: asm_helpers.c  mod.rs  pvr_cpustr.rs
src/arch/x86_64/: asm_helpers.c  cpuid.rs  mod.rs  msr.rs  pci.rs  rdpmc.rs
src/perf/: event.rs  ffi.rs  mmap.rs  mod.rs  version.rs
src/pmu/: events.rs  metric_expressions.rs  metric_parser.pest  metrics.rs  mod.rs
src/registry/: events.rs  metrics.rs  mod.rs
src/x86_64/: cpuid.rs  mod.rs  msr.rs  rdpmc.rs
