[package]
name = "perf-utils"
version = "0.0.1"
authors = ["Subho S. Banerjee <ssbaner2@illinois.edu>"]
edition = "2018"

[dependencies]
failure = "0.1"
libc =  "0.2"
regex = "1.0"
serde_json = "1.0"
ioctl-sys = "0.5"

[build-dependencies]
cc = "1.0"
bindgen = "0.51"

[profile.release]
lto = true
panic = "abort"
