[package]
name = "perf-utils"
version = "0.1.0"
authors = ["Subho S. Banerjee <ssbaner2@illinois.edu>"]
edition = "2018"
publish = false

[dependencies]
log = "0.4"
failure = "0.1"
nix = "0.15"
glob = "0.3"
regex = "1.0"
pest = "2.1"
pest_derive = "2.1"
lazy_static = "1.4"
serde_json = "1.0"
byteorder = "1.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.51"

[dev-dependencies]
env_logger = "0.7"
rayon = "1.2"

[profile.release]
lto = true
